--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 {
   --yellow: #F5C32C;
     --orange : #FCA61F;
+    /* --orange : #007aff; */
     --black : #242D49;
     --gray : #788097;
     --blueCard : #DDF8FE;
@@ -12,12 +13,27 @@
 }
 
 .App{
-    padding: 0.5rem 3.5rem;
+    padding: 1.5rem 3.5rem;
     overflow: hidden;
     color: var(--black);    
 }
 
+.button {
+  border-radius: 34px;
+  border: none;
+  color: white;
+  font-size: 16px;
+  padding: 11px 26px 11px 26px;
+  background: linear-gradient(180deg, #fdc50f 26.71%, #fb982f 99.36%);
+  box-shadow: 0px 10px 24px 3px rgba(251, 161, 40, 0.42);
+}
 
+.button:hover{
+  background: white;
+  cursor: pointer;
+  color: var(--orange);
+  border: 1px solid var(--orange);
+}
   
 
   
